--- a/projet_html_code/index.html
+++ b/projet_html_code/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow Semi Condensed:600,700">
-  <script src="rules.js"></script>
+  <script src="rules.js" defer></script>
 
   <title>Rock, Paper, Scissors</title>
 </head>
